<resources>
    <string name="app_name">Hiking Island</string>
    <string name="whoareyou_message">Who are you?</string>
    <string name="welcome_message">Welcome!</string>

    <!--texts-->
    <string name="interest_basic">To participate in events</string>
    <string name="interest_medium">To organize events</string>
    <string name="interest_high">To create events</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>

    <!--buttons-->
    <string name="register">New User</string>
    <string name="login">Login</string>
    <string name="accept_register">Register</string>

    <!--label-->
    <string name="main_label">Welcome to Hiking Island!</string>
    <string name="register_label">New user</string>
    <string name="welcome_label">Welcome</string>
    <string name="gender_label">Gender</string>
    <string name="name_label">Name</string>
    <string name="surname_label">Surname</string>
    <string name="age_label">Age</string>
    <string name="nickname_label">Nickname</string>
    <string name="pass_label">Password</string>
    <string name="interest_label">Interests</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="gallery">Gallery</string>
    <string name="trails">Hiking Trails</string>
    <string name="comunicate">Comunicate</string>

    <!--error-->
    <string name="obligatory_field">Campo obligatorio</string>
    <string name="numeric_field">Debe de tener 16 años o más</string>
    <string name="error_numeric_between">La edad debe ser superior a 16</string>
    <string name="compare_field">Contraseñas diferentes</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_login">Main_login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Hiking Island</string>
    <string name="nav_header_subtitle">fransanchez1989@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_option1">Option 1</string>
    <string name="action_option2">Option 2</string>
    <string name="title_activity_trails">Trails</string>
    <string name="section_format">Hiking trail: %1$d</string>


</resources>
